# HarmonyHavenAndroidClient

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app/comment-feature/: build.gradle.kts
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  harmonyhaven.cpp
app/src/main/res/anim/: overshoot_interpolator.xml
app/src/main/res/drawable/: account.xml  account_icon.xml  animated_logo.xml  anxiety.xml  basicline.xml  being_present.xml  beyourself.xml  check.xml  confidence.xml  dsadas.xml  edit_svgrepo_com.xml  edit_svgrepo_com__1_.xml  editsection.xml  email_svgrepo_com.xml  group.xml  (+62 more)
app/src/main/res/drawable-nodpi/: arrow_back.xml  female_icon.xml  fiber_manual_record_fill0_wght400_grad0_opsz24.xml  gender_male_icon.xml  google_icon.xml  home_icon.xml  onboarding_screen_image_1.xml  onboarding_screen_image_2.xml  onboarding_screen_image_3.xml  other_icon.xml
core/: build.gradle.kts
core/data/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/domain/: build.gradle.kts
core/model/: build.gradle.kts
core/network/: build.gradle.kts
core/notifications/: build.gradle.kts
core/ui/: build.gradle.kts
feature/: build.gradle.kts
feature/auth/: build.gradle.kts
feature/home/: build.gradle.kts
feature/messages/: build.gradle.kts
feature/onboarding/: build.gradle.kts
feature/profile/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+601 files in other folders)
